--- a/Lang/package.json
+++ b/Lang/package.json
@@ -6,12 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.6.0",
+    "await": "^0.2.6",
+    "aws-sdk": "^2.176.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.1.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
+    "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5"
   }
 }
